@@ -1,4 +1,6 @@
 [WIP] 1.0.2
+- Magnetic Crust now properly applies a flat defense buff
+- Tweaked some condition text
 - Renamed Unstable Arid to Arid Unstable
 - Renamed Bombarded Lifeless to Lifeless-Bombarded
 - Massive internal refactoring
